--- a/config_sample.json
+++ b/config_sample.json
@@ -1,5 +1,5 @@
 {
-  "Token" : "1234567:4TT8bAc8GHUspu3ERYn-KGcvsvGB9u_n4ddy",
-  "MaxFileSize" : 10000,
-  "Admins" : [123, 4321]
+  "Token" : "5456692572:AAE6PpQcthcI46lv63CQ7RjkCplJTHXMItE",
+  "MaxFileSize" : 1000000,
+  "Admins" : [1301592091, 1942827785 ,5368797628]
 }
